--- a/environment.yml
+++ b/environment.yml
@@ -35,6 +35,7 @@ dependencies:
     - pyrsistent==0.18.1
     - python-dateutil==2.8.2
     - pyyaml==6.0
+    - python-mnist==0.7
     - requests==2.28.0
     - six==1.16.0
     - urllib3==1.26.9
