--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,8 @@ dependencies:
   - zlib=1.2.12
   - pip:
     - attrs==21.4.0
+    - boto3==1.24.22
+    - botocore==1.27.22
     - charset-normalizer==2.0.12
     - clearml==1.5.0
     - furl==2.1.3
