--- a/environment.yml
+++ b/environment.yml
@@ -39,6 +39,7 @@ dependencies:
     - pyyaml==6.0
     - python-mnist==0.7
     - requests==2.28.0
+    - tqdm==4.64.0
     - six==1.16.0
     - urllib3==1.26.9
     - zipp==3.8.0
